Add new Profile

--- a/onlyWeb/src/app/app.component.html
+++ b/onlyWeb/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top bg-light" style="display: flex;">
+<!-- <nav class="navbar sticky-top bg-light" style="display: flex;">
   <div class="container-fluid">
     <a class="navbar-brand">
       <img src="../assets/Picture/OIP.jpg" style="width: 100px;height: 10%;">
@@ -14,5 +14,44 @@
 
     </form>
   </div>
-</nav>
-<router-outlet style="background-color: white;"></router-outlet>
+</nav> -->
+<div class="container-fluid">
+
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" >OnlyMe</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="profile">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="">Pricing</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown link
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+  <router-outlet style="background-color: white;"></router-outlet>
+</div>
