--- a/onlyWeb/src/styles.scss
+++ b/onlyWeb/src/styles.scss
@@ -122,3 +122,5 @@ $carousel-transition:                transform $carousel-transition-duration eas
 $carousel-dark-indicator-active-bg:  $black;
 $carousel-dark-caption-color:        $black;
 $carousel-dark-control-icon-filter:  invert(1) grayscale(100);
+
+$font-family: 'Kanit', sans-serif;
